support DFUService of BLE_API

--- a/Board/arch_ble/device_firmware_updates/bootloader_gcc_ble/gcc/Makefile
+++ b/Board/arch_ble/device_firmware_updates/bootloader_gcc_ble/gcc/Makefile
@@ -1,7 +1,7 @@
 TARGET_CHIP := NRF51822_QFAA_CA
-BOARD := BOARD_ARCH_BLE
+BOARD ?= BOARD_ARCH_BLE
 ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
-CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -DBOARD_ARCH_BLE
+CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -D$(BOARD)
 
 DEVICESERIES := nrf51
 
