--- a/Source/templates/gcc/Makefile.common
+++ b/Source/templates/gcc/Makefile.common
@@ -92,16 +92,15 @@ vpath %.s $(ASSEMBLER_SOURCE_PATHS)
 # Include automatically previously generated dependencies
 -include $(addprefix $(OBJECT_DIRECTORY)/, $(COBJS:.o=.d))
 
+.PHONY: release
+release:  CFLAGS += -DNDEBUG -Os
+release:  ASMFLAGS += -DNDEBUG -Os
+release:  $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).bin $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex
+
 ### Targets
 debug:    CFLAGS += -DDEBUG -g3 -O0
 debug:    ASMFLAGS += -DDEBUG -g3 -O0
 debug:    $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).bin $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex
-
-.PHONY: release
-release: clean
-release:  CFLAGS += -DNDEBUG -Os
-release:  ASMFLAGS += -DNDEBUG -Os
-release:  $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).bin $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex
 
 echostuff:
 	@echo C_OBJECTS: [$(C_OBJECTS)]
@@ -137,7 +136,7 @@ $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex: $(OUTPUT_BINARY_DIRECTORY)/$(
 
 ## Default build target
 .PHONY: all
-all: clean release
+all: release
 
 clean:
 	$(RM) $(OUTPUT_BINARY_DIRECTORY)
