add grove node board and ble smurfs boarad

--- a/Board/arch_ble/device_firmware_updates/bootloader_gcc_ble/gcc/Makefile
+++ b/Board/arch_ble/device_firmware_updates/bootloader_gcc_ble/gcc/Makefile
@@ -1,5 +1,5 @@
 TARGET_CHIP := NRF51822_QFAA_CA
-BOARD ?= BOARD_ARCH_BLE
+BOARD ?= ARCH_BLE
 ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
 CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -D$(BOARD)
 
@@ -33,7 +33,7 @@ INCLUDEPATHS += -I"../"
 SDK_PATH = ../../../../../
 
 LINKER_SCRIPT = gcc_$(DEVICESERIES)_bootloader_$(DEVICE_VARIANT).ld
-OUTPUT_FILENAME := $(OUTPUT_FILENAME)_bootloader_$(DEVICE_VARIANT)
+OUTPUT_FILENAME = $(shell echo $(BOARD) | tr A-Z az)_bootloader_$(DEVICE_VARIANT)
 
 DEVICE_VARIANT := xxaa
 #DEVICE_VARIANT := xxab
